# libsupport

./: .gitignore  CONTRIBUTING.rst  README.rst  meson.build  meson_options.txt
.github/workflows/: default.yml  pr-review.yml
include/: meson.build
include/support/: atomic.h  compiler.h  endian.h  log.h  mem.h  meson.build  mmio.h
scripts/: checkpatch.pl  ctags.sh
src/: log.c  mem.c  meson.build
